--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 quarkus.datasource.db-kind=postgresql
+
+# RestCountries API Configuration
+quarkus.rest-client.restcountries-api.url=https://restcountries.com/v3.1
+quarkus.rest-client.restcountries-api.scope=jakarta.inject.Singleton
