--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
+# Datasource Configuration
 quarkus.datasource.db-kind=postgresql
 
 # RestCountries API Configuration
 quarkus.rest-client.restcountries-api.url=https://restcountries.com/v3.1
 quarkus.rest-client.restcountries-api.scope=jakarta.inject.Singleton
+
+# OpenAPI / Swagger Configuration
+quarkus.swagger-ui.always-include=true
+quarkus.smallrye-openapi.info-title=Clients API
+quarkus.smallrye-openapi.info-version=1.0.0
+quarkus.smallrye-openapi.info-description=REST API for managing clients with auto-populated demonyms
+quarkus.smallrye-openapi.info-contact-name=API Support
